--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,8 @@
             ],
             "styles": [
               "src/styles.css"
-            ]
+            ],
+            "outputPath": "dist/FontedCalendario/browser"
           },
           "configurations": {
             "production": {
